[package]
name = "other_gil"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.24", features = ["extension-module"] }
numpy      = "0.24"
pythonize  = "0.24"
tempfile   = "3.3"
bincode = { version = "2.0.1", features = ["serde"] }
ipc-channel = "0.19"
serde_json = "1.0"
memmap2 = "*"
nix = { version =  "0.30.1", features = ["signal"]}