[package]
name = "gilboost"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.24", features = ["extension-module"] }
numpy      = "0.24"
pythonize  = "0.24"
tempfile   = "3.3"
bincode = { version = "1.3.3" }
ipc-channel = "0.19"
serde_json = "1.0"
memmap2 = "*"
nix = { version =  "0.30.1", features = ["signal",]}
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = "1.40"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }